cmake_minimum_required(VERSION 3.1)

project(LD43)

set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/CMake" ${CMAKE_MODULE_PATH})

set(CMAKE_DEBUG_POSTFIX          "d")
set(CMAKE_MINSIZEREL_POSTFIX     "s")
set(CMAKE_RELWITHDEBINFO_POSTFIX "rd")

set(OUTPUT_BINDIR ${PROJECT_BINARY_DIR}/bin)
file(MAKE_DIRECTORY ${OUTPUT_BINDIR})

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_BINDIR})
foreach (CONF ${CMAKE_CONFIGURATION_TYPES})
	string(TOUPPER "${CONF}" CONF)
	set("CMAKE_RUNTIME_OUTPUT_DIRECTORY_${CONF}" "${OUTPUT_BINDIR}")
endforeach ()

include_directories(
	${SFML_INCLUDE_DIR}
)

add_subdirectory(src)
